Waybar Fix spacing for workspaces

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -57,7 +57,7 @@ button {
 /*}*/
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 0px 2px;
     background-color: transparent;
     color: #ffffff;
 }
